--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect server.js"
+    "dev": "nodemon --inspect server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,5 @@
     "express": "^4.16.3",
     "nodemon": "^1.18.3"
   },
-  "dependencies": {
-    "pixi.js": "^4.8.1"
-  }
+  "dependencies": {}
 }
